2000-01-23  Manuel Guesdon <mguesdon@sbuilders.com>
        * Added Mirko Viviani's GNUstepWeb-HOWTO


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@5827 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2000-01-23  Manuel Guesdon <mguesdon@sbuilders.com>
 
+	* Added Mirko Viviani's GNUstepWeb-HOWTO
+	
+2000-01-23  Manuel Guesdon <mguesdon@sbuilders.com>
+
+        * GSWeb.framework/html.g: modified Include 
+        * GSWeb.framework/PageDef.g: modified Include 
+        * GSWeb.framework/htmltag.g: modified Include 
+        * GSWeb.framework/html.g: modified TEXT rule for " in PCDATA
+        * GSWeb.framework/html.g: modified ATTR rule for spaces around =
+	
+2000-01-23  Manuel Guesdon <mguesdon@sbuilders.com>
+
         * GSWeb.framework/GSWApplication.m: tests added in GSWApplication _argsDictionaryWithUserDefaults:
 
 	
