*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@5877 72102866-910b-0410-8b05-ffd578937521

--- a/README
+++ b/README
@@ -38,7 +38,7 @@ Special Thanks
 *	GNUstep team for their great work
 
 *	Helge Hess <hh@mdlink.de> (a WebObjects/OpenStep expert) from 
-		"MDlink Online Service" (http://www.mdlink.de) for the 
+		"MDlink online service center" (http://www.mdlink.de) for the 
 		explanation of some WO concepts and dark WO documentation.
 		I hope we'll work together someday :-)
 
