--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-01-27  Manuel Guesdon <mguesdon@sbuilders.com>
+	
+	* GSWeb/GSWApplication.m removed #include <NGReflection/common.h>
+	* GSWeb/GSWeb.h: removed #include <gnustep/base/...>
+	
 2000-01-23  Manuel Guesdon <mguesdon@sbuilders.com>
 
 	* Added Mirko Viviani's GNUstepWeb-HOWTO
