2000-01-29  Manuel Guesdon <mguesdon@sbuilders.com>
	* GSWeb/GSWConfig.h: changed GSWOPTVALUE_FrameworksBaseURL to
		@"/GSW/Frameworks"


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@5885 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-01-29  Manuel Guesdon <mguesdon@sbuilders.com>
+	
+	* GSWeb/GSWConfig.h: changed GSWOPTVALUE_FrameworksBaseURL to
+		@"/GSW/Frameworks"
+	
 2000-01-27  Manuel Guesdon <mguesdon@sbuilders.com>
 	
 	* GSWeb/GSWApplication.m removed #include <NGReflection/common.h>
