2000-02-05  Mirko Viviani <mirko.viviani@rccr.cremona.it>
	* GSWeb/Application.m: in GSWApplicationMain() created an autorelease pool,
	  released GSWApp when it exits from the run loop
	* Doc/GNUstepWeb-HOWTO: updated


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@5947 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-02-05  Mirko Viviani <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb/Application.m: in GSWApplicationMain() created an autorelease pool,
+	  released GSWApp when it exits from the run loop
+	* Doc/GNUstepWeb-HOWTO: updated
+
 2000-01-29  Manuel Guesdon <mguesdon@sbuilders.com>
 	
 	* GSWeb/GSWConfig.h: changed GSWOPTVALUE_FrameworksBaseURL to
