--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-02-12  Manuel Guesdon <mguesdon@sbuilders.com>
+
+	* GSWForm.m: Added senderId test in -invokeActionForRequest:inContext:
+		and -takeValuesFromRequest:inContext:
+	* GSWComponentReference.m: Added senderId test in 
+		-invokeActionForRequest:inContext:
+		and -takeValuesFromRequest:inContext:
+
 2000-02-05  Mirko Viviani <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb/Application.m: in GSWApplicationMain() created an autorelease pool,
