2000-03-08  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
	Added patches by Karl Kraft:
	* GSWGenericContainer.m/h: implemented
	* GSWConstants.m: changed dateFormat__Key to @"dateformat"
	and numberFormat__Key to @"numberformat"


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6221 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-03-08  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	Added patches by Karl Kraft:
+	* GSWGenericContainer.m/h: implemented
+	* GSWConstants.m: changed dateFormat__Key to @"dateformat"
+	and numberFormat__Key to @"numberformat"
+
 2000-02-13  Manuel Guesdon <mguesdon@sbuilders.com>
 
 	* GSWStatisticsStore.m: added comment
