--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-09  Karl Kraft <karl@nfox.com>
+	Change to GSWPopUpButton
+        * the <option> tag should not have a </option> closing tag.
+
 2000-03-08  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	Added patches by Karl Kraft:
