Check for non-nill before removing a key from a dictionary (avoids useless warnings)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6431 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2000-04-06   Karl Kraft <karl@nfox.com>
+	* Added two checks for non-nil key before calling removeObjectForKey:
+
 2000-03-31  Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWResourceManager.m: Added Debug Error Traces
