Fixed a strcpy into a short malloc buffer in GSWAdaptors/common/GSWHTTPResponse.c
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6451 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2000-04-11  Karl Kraft <karl@nfox.com>
+        *   Fixed a strcpy into a short malloc buffer in GSWAdaptors/common/GSWHTTPResponse.c
+
 2000-04-06   Karl Kraft <karl@nfox.com>
 	* Added two checks for non-nil key before calling removeObjectForKey:
 
