Removed assignments of NULL to va_list, because these don't compile on PPC.  This matches how va_list is used in other parts of GNUstep
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6530 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2000-04-20  Karl Kraft <karl@nfox.com>
+        *   Removed assignments to va_list because they don't work on PPC
+
 2000-04-11  Karl Kraft <karl@nfox.com>
         *   Fixed a strcpy into a short malloc buffer in GSWAdaptors/common/GSWHTTPResponse.c
 
