*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6893 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2000-03-31  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWAdaptors/Apache/GNUmakefile: added -I/usr/include/apache in APACHEHEADERS
+	
 2000-06-20  Karl Kraft <karl@nfox.com> 
   *  GSWCheckBoxList.m  Added support for the disabled key.
 
