*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@6895 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2000-07-08  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWAdaptors/Apache/GNUmakefile: added -I/usr/include/apache in APACHEHEADERS
+	* GSWAdaptors/common/GSWConfig.c: added directive name in GSWConfig_SetConfigFilePath errore message
 	
 2000-06-20  Karl Kraft <karl@nfox.com> 
   *  GSWCheckBoxList.m  Added support for the disabled key.
