2000-08-26  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
	* GSWMailDelivery.m/.h: rewritten sendEmail: with execlp() to avoid
	  email content manipulation.
	* GSWDisplayGroup.m: fixed a cursor bug.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@7247 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-26  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWMailDelivery.m/.h: rewritten sendEmail: with execlp() to avoid
+	  email content manipulation.
+	* GSWDisplayGroup.m: fixed a cursor bug.
+
 2000-08-14  Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWeb.framework/GSWApplication.m: added "exit" in terminate
