--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-10-29  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWElementIDString.h: use NSMutableString instead of
+	the no longer present NSGMutableString.
+
 2000-10-04  Manuel Guesdon <mguesdon@orange-concept.com>
 
         * GSWExtensions.framework/Makefile.preamble: added GDL2 FLAG
