* GSWeb.framework/GSWApplication.m (GSWApplicationMain): fixed path for dynamically loading frameworks.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@7961 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWApplication.m (GSWApplicationMain): fixed path
+	for dynamically loading frameworks.
+
 2000-10-30  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/htmltag.g: changed gsweb include dir from
