2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWTemplateParserXML.m: remove setExternalEntityLoader: call


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@7985 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>
 
+	* GSWeb.framework/GSWTemplateParserXML.m: remove setExternalEntityLoader: call
+
+2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>
+
 	* GSWeb.framework/GSWTemplateParserXML.m: remove xml-error.h include
 
 2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>
