* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup -insertObjectAtIndex:]): fixed missing method call.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@8222 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-28  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
+	-insertObjectAtIndex:]): fixed missing method call.
+
 2000-11-24  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
