* GSWeb.framework/GSWComponentRequestHandler.m ([GSWComponentRequestHandler -lockedDispatchWithPreparedSession: inContext:elements:]): do not 'clear' cookie if not enabled. * GSWeb.framework/GSWComponent.m ([GSWComponent -performParentAction:]): implemented.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@8247 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-12-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWComponentRequestHandler.m
+	([GSWComponentRequestHandler -lockedDispatchWithPreparedSession:
+	inContext:elements:]): do not 'clear' cookie if not enabled.
+	* GSWeb.framework/GSWComponent.m ([GSWComponent
+	-performParentAction:]): implemented.
+
 2000-11-28  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
