* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup -setSelectedObjects:]): implemented. * GSWeb.framework/GSWCheckBoxList.m ([GSWCheckBoxList -_slowTakeValuesFromRequest:inContext:]): implemented auto value attribute. Fixed object selections. ([GSWCheckBoxList -appendToResponse:inContext:]): likewise.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@8283 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2000-12-08  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
+	-setSelectedObjects:]): implemented.
+	* GSWeb.framework/GSWCheckBoxList.m ([GSWCheckBoxList
+	-_slowTakeValuesFromRequest:inContext:]): implemented auto value
+	attribute. Fixed object selections.
+	([GSWCheckBoxList -appendToResponse:inContext:]): likewise.
+
 2000-12-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/GSWComponentRequestHandler.m
